# cert-watch

./: README.md  pyproject.toml
.github/workflows/: build-deb.yml  build-rpm.yml  transifex-sync.yml
.tx/: config
data/: io.github.yeager.CertWatch.desktop
debian/: changelog  control  copyright  files  rules  watch
locale/sv/LC_MESSAGES/: cert-watch.mo
po/: cert-watch.pot  sv.mo  sv.po
src/cert_watch/: __init__.py  __main__.py  app.py  email_notifier.py  preferences.py
src/cert_watch.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
