[build-system]
requires = ["setuptools>=68.0", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "cert-watch"
version = "0.1.3"
description = "TLS Certificate Monitor — GTK4/Adwaita app for monitoring SSL/TLS certificates"
readme = "README.md"
license = "GPL-3.0-or-later"
requires-python = ">=3.10"
authors = [{ name = "Daniel Nylander" }]
dependencies = ["PyGObject>=3.42"]

[project.scripts]
cert-watch = "cert_watch.app:main"

[tool.setuptools.packages.find]
where = ["src"]
